[package]
name = "drone-riscv-macros"
version = "0.14.0"
authors = ["Valentine Valyaeff <valentine.valyaeff@gmail.com>"]
edition = "2018"
resolver = "2"
repository = "https://github.com/drone-os/drone-riscv"
homepage = "https://www.drone-os.com/"
documentation = "https://api.drone-os.com/drone-riscv/0.14/drone_riscv_macros/"
license = "MIT OR Apache-2.0"
description = """
Procedural macros for drone-riscv.
"""

[lib]
proc-macro = true

[dependencies.drone-macros-core]
version = "0.14.0"
path = "../../drone-core/macros-core"

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "1"
